# emotiv-lsl-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run.ps1
.cursor/plans/: fix_missing_libhidapi.0.dylib_at_runtime_on_macos_68830be6.plan.md  install_hidapi.dll_on_windows_dd9c8cb6.plan.md  single-command_build_&_run_33a018ac.plan.md
.github/workflows/: build.yml
src/emotiv/: CMakeLists.txt  emotiv_base.cpp  emotiv_epoc_x.cpp
